Fix layout issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html, body, #root, .app {
+    height: 100%;
+}
+
 body {
   background-color: #9b0048;
   color: #ecc;
@@ -10,18 +14,21 @@ body {
 }
 
 .home-container {
-  display: flex;
+    display: flex;
+    height:100%;
 }
 
 .shader-canvas {
-  display: inline-block;
+  display: flex;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .home-splash-panel {
   background-color: #fff;
   width: 100%;
+  height: 100%;
 }
 
 em {
@@ -90,10 +97,11 @@ a:hover {
   background-color: #9b0048;
   min-width: 480px;
   width: 30%;
-  padding: 3rem;
+  padding: 0 3rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: relative;
 }
 
 .home-about-em {
